--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -993,6 +993,18 @@ The other half of this result [soundness/completeness]
 
 tense example from §\ref{FOL.semantics}.
 
+modal logic
+
+intuitionism: 
+
+Burgess philosophical logic
+
+RELEVANCE
+
+BEall and van fraassen
+
+priest non classical
+
 \keyideas{
 	\item With the basics under your belt, there are many possible next steps in logic. 
 	\item It is natural to try to establish more metatheoretical results about the systems we have discussed, and some resources are indicated in the text to help you do this if you wish.
